# advanced-prompt-engineering

./: README.md  pyproject.toml
assignments/: lesson1-0.py  lesson1-1.py  lesson2-0.py  lesson3-0.py  lesson4-0.py  lesson5-0.md
in-context-learning/: basic.py
problem-decomposition-prompting/: basic.py
self-criticism-prompting/: basic.py
thought-generation-prompting/: basic.py
